--- a/style.css
+++ b/style.css
@@ -1,1 +1,30 @@
+html, body {
+  margin: 0;
+}
 
+.grid-container {
+  height: 100vh;
+  width: 100vw;
+  display: grid;
+  grid-template-columns: 1fr 3.8fr;
+  grid-template-rows: 1fr 4.5fr;
+}
+
+.sidebar-container {
+  background-color: rgb(0, 119, 255);
+  grid-column: 1 / 2;
+  grid-row: 1 / 3;
+}
+
+.header-container {
+  background-color: white;
+  border: 1px solid black;
+  grid-column: 2 / 3;
+  grid-row: 1 / 2;
+}
+
+.main-content-container {
+  background-color: rgb(184, 191, 197);
+  grid-column: 2 / 3;
+  grid-row: 2 / 3;
+}
