--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@ html, body {
   margin: 0;
 }
 
+/* Overarching grid container that encompasses the entire webpage. */
 .grid-container {
   height: 100vh;
   width: 100vw;
@@ -10,11 +11,33 @@ html, body {
   grid-template-rows: 1fr 4.5fr;
 }
 
+/* Sidebar: start of CSS classes */
+
 .sidebar-container {
-  background-color: rgb(0, 119, 255);
+  background-color: rgb(2, 149, 235);
+  color: white;
   grid-column: 1 / 2;
   grid-row: 1 / 3;
+  padding: 8%;
+  display: grid;
+  grid-template-rows: 1fr 4fr 6fr;
 }
+
+.dashboard {
+  font-size: 20px;
+  font-weight: 700;
+}
+
+.home, .settings {
+  font-weight: 600;
+  display: grid;
+  gap: 15px;
+  align-content: start; 
+}
+
+/* Sidebar: end of CSS classes */
+
+/* Header: start of CSS classes */
 
 .header-container {
   background-color: white;
@@ -23,8 +46,14 @@ html, body {
   grid-row: 1 / 2;
 }
 
+/* Header: end of CSS classes */
+
+/* Main-Content: start of CSS classes */
+
 .main-content-container {
-  background-color: rgb(184, 191, 197);
+  background-color: rgb(208, 215, 221);
   grid-column: 2 / 3;
   grid-row: 2 / 3;
 }
+
+/* Main-Content: end of CSS classes */
