--- a/style.css
+++ b/style.css
@@ -52,20 +52,46 @@ html, body {
 
 .search-bar {
   padding-left: 2vw;
+  
+}
+
+input {
+  width: 82%;
+  margin-left: 2.5vw;
 }
 
 .notifications {
   justify-self: end;
-  padding-right: 2vw;
+  padding-right: 5vw;
+  display: grid;
+  grid-template-columns: 1fr 1fr auto;
+  gap: 2.5vw;
 }
 
-.hi-there {
+.hi-there-area {
   padding-left: 2vw;
+  display: grid;
+  grid-template-columns: 1fr 12fr;
+  grid-template-rows: 1fr 1fr;
+}
+
+.big-header-picture {
+  grid-row: 1 / 3;
+  align-self: center;
+}
+
+.hi-there, .hi-there-name {
+  padding-top: 0.3vh;
+  padding-bottom: 0.7vh;
 }
 
 .buttons {
   justify-self: end;
   padding-right: 2vw;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  gap: 1vw;
+  padding-right: 6vw;
 }
 
 /* Header: end of CSS classes */
