--- a/style.css
+++ b/style.css
@@ -52,12 +52,12 @@ html, body {
 
 .search-bar {
   padding-left: 2vw;
-  
 }
 
 input {
   width: 82%;
   margin-left: 2.5vw;
+  border-radius: 25px;
 }
 
 .notifications {
@@ -90,8 +90,16 @@ input {
   padding-right: 2vw;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
-  gap: 1vw;
-  padding-right: 6vw;
+  gap: 1.7vw;
+  padding-right: 3vw;
+}
+
+button {
+  height: 30px;
+  width: 65px;
+  border-radius: 25px;
+  background-color: rgb(2, 149, 235);
+  color: white;
 }
 
 /* Header: end of CSS classes */
@@ -107,42 +115,77 @@ input {
   grid-template-columns: 3fr 1fr;
   /* "Your Projects & Announcements" header section, area from "Site Maintenance" to
   "Updated Privacy Policy," the "Trending" header section, area below "Trending." */
-  grid-template-rows: 1fr 4fr 1fr 3.5fr;
+  grid-template-rows: 0.7fr 4fr 1fr 3.5fr;
 }
 
 .your-projects-header {
   grid-column: 1 / 2;
+  align-self: center;
+  margin-left: 1vw;
 }
 
 .projects-grid {
   grid-column: 1 / 2;
   grid-row: 2 / 5;
+  padding-bottom: 5vh;
   display: grid;
   grid-template-columns: 1fr 1fr;
   grid-template-rows: 1fr 1fr 1fr;
+  gap: 2vw;
+}
+
+.project {
+  background-color: white;
+  margin-left: 1vw;
+  margin-right: 1vw;
+  margin-bottom: 1vh;
+  border-radius: 10px;
+  padding: 25px 15px;
+}
+
+.project-name {
+  font-weight: bold;
 }
 
 .announcements-header {
   grid-column: 2 / 3;
+  align-self: center;
 }
 
 .announcements-square {
   grid-column: 2 / 3;
   grid-row: 2 / 3;
+  padding: 10px;
   display: grid;
   grid-template-rows: 1fr 1fr 1fr;
+  background-color: white;
+  border-radius: 10px;
+}
+
+.announcement {
+  font-size: 11px;
+}
+
+.announcement-name {
+  font-weight: bold;
+  font-size: 12.5px;
 }
 
 .trending-header {
   grid-column: 2 / 3;
   grid-row: 3 / 4;
+  align-self: center;
 }
 
 .trending-square {
   grid-column: 2 / 3;
   grid-row: 4 / 5;
+  padding: 10px;
   display: grid;
   grid-template-rows: 1fr 1fr 1fr 1fr;
+  margin-bottom: 6vh;
+  background-color: white;
+  border-radius: 10px;
 }
 
 /* Main-Content: end of CSS classes */
