--- a/style.css
+++ b/style.css
@@ -218,9 +218,13 @@ button {
   padding: 10px;
   display: grid;
   grid-template-rows: 1fr 1fr 1fr 1fr;
-  margin-bottom: 6vh;
+  grid-template-columns: 1fr 2fr;
   background-color: white;
   border-radius: 10px;
+}
+
+.trending-square img {
+  border-radius: 50px;
 }
 
 /* Main-Content: end of CSS classes */
