--- a/style.css
+++ b/style.css
@@ -167,10 +167,22 @@ button {
   margin-bottom: 1vh;
   border-radius: 10px;
   padding: 25px 15px;
+  display: grid;
+  /* grid-template-rows: 2fr 1fr; */
+  box-shadow: inset 5px 0px orange;
 }
 
 .project-name {
   font-weight: bold;
+}
+
+.project-icons {
+  justify-self: end;
+  align-self: end;
+}
+
+.project-icons img {
+  margin-left: 10px;
 }
 
 .announcements-header {
@@ -221,10 +233,15 @@ button {
   grid-template-columns: 1fr 2fr;
   background-color: white;
   border-radius: 10px;
+  font-size: 13px;
 }
 
 .trending-square img {
   border-radius: 50px;
+}
+
+.trending-name {
+  font-weight: bold;
 }
 
 /* Main-Content: end of CSS classes */
